--- a/backend-laravel/.env.example
+++ b/backend-laravel/.env.example
@@ -37,7 +37,8 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+QUEUE_CONNECTION=redis
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
